# agents-crash-course

./: .gitignore
course/: agent.py  chunk_docs.py  extract_docs.py  pyproject.toml  scratch.ipynb  search.py
project/: agent.py  chunk_docs.py  extract_docs.py  pyproject.toml  scratch.ipynb  search.py
