[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.7",
    "openai>=2.15.0",
    "pydantic-ai>=1.51.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
